syntax = "proto3";

package auth;


service AuthService {
  rpc SignUp (SignUpRequest) returns (SignUpResponse);
  rpc SignIn (SignInRequest) returns (AuthResponse);
  rpc SignOut (SignOutRequest) returns (SignOutResponse);
  rpc RefreshToken (RefreshRequest) returns (RefreshResponse);
}

message SignOutRequest {
  string refresh_token = 1;
}

// --- Requests / Responses ---

message SignUpRequest {
  string fullname = 1;
  string username = 2;
  string email = 3;
  string phone = 4;
  string password = 5;
  repeated int32 roles = 6; 
}

message SignInRequest {
  string email = 1;
  string password = 2;
}

message RefreshRequest {
  string refresh_token = 1;
}

message RefreshResponse {
  string message = 1;
  string access_token = 2;
  string refresh_token = 3;
}

message AuthResponse {
  string message = 1;
  string access_token = 2;   // JWT or opaque token
  string refresh_token = 3;
  int32 id = 4;
  int32 failed_login_attempts = 5;
}

message SignUpResponse {
  string id = 1;
  string fullname = 2;
  string username = 3;
  string email = 4;
  string phone = 5;
  string password_hash = 6;
  bool is_active = 7;
  string refresh_token_hash = 8;
  int32 failed_login_attempts = 9;
  string last_login_at = 10;
  string createdAt = 11;
  string updatedAt = 12;
}

message SignOutResponse {
    string message = 1;
}
